--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "github-actions"
           git checkout $GITHUB_REF
-          git add dist/consent.min.js -f
+          git add --force dist/consent.min.js
           git commit -m "chore: add built consent.min.js for release $GITHUB_REF"
           git push origin $GITHUB_REF
