--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,5 +18,9 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
       - name: Install dependencies
         run: npm ci
+      - name: Set Git user
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "github-actions"
       - name: Build
         run: npm run release
