--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,12 @@ jobs:
           git config --local user.name "github-actions"
       - name: Extract version
         run: |
-          VERSION=$(grep '"version":' package.json | sed -E 's/.*"version": "([^"]+)".*/\1/')
+          echo "VERSION=$(grep '"version":' package.json | sed -E 's/.*"version": "([^"]+)".*/\1/')" >> $GITHUB_ENV
       - name: Delete existing tag if it exists
         run: |
-          if git rev-parse "refs/tags/$VERSION" >/dev/null 2>&1; then
-            git tag -d $VERSION
-            git push --delete origin $VERSION
+          if git rev-parse "refs/tags/${{ env.VERSION }}" >/dev/null 2>&1; then
+            git tag -d ${{ env.VERSION }}
+            git push --delete origin ${{ env.VERSION }}
           fi
       - name: Build
         run: npm run build
@@ -37,6 +37,6 @@ jobs:
         run: git add -f dist/
       - name: Create Release Tag
         run: |
-          git tag -a $VERSION -m "Release: $VERSION" -f
+          git tag -a ${{ env.VERSION }} -f
       - name: Push changes
-        run: git push origin main --tags -f
+        run: git push origin tag ${{ env.VERSION }} -f
